# sigcli

./: .git-blame-ignore-revs  .gitignore  .prettierignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  agentic-conf-submission.md  eslint.config.js  linkedin-skills-post-draft.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
sdk/python/: README.md  pyproject.toml
sdk/python/tests/: test_client.py  test_formatter.py  test_reader.py  test_watcher.py
skills/: README.md  conftest.py  install.sh  pyproject.toml  test_helpers.py  uninstall.sh
skills/bilibili/: SKILL.md
skills/bilibili/references/: provider-config.yaml
skills/bilibili/scripts/: bilibili_client.py  bilibili_coin.py  bilibili_comments.py  bilibili_dynamic.py  bilibili_favorite.py  bilibili_history.py  bilibili_hot.py  bilibili_like.py  bilibili_me.py  bilibili_popular.py  bilibili_ranking.py  bilibili_search.py  bilibili_subtitle.py  bilibili_user.py  bilibili_video.py
skills/bilibili/tests/: test_bilibili_coin.py  test_bilibili_comments.py  test_bilibili_dynamic.py  test_bilibili_favorite.py  test_bilibili_history.py  (+9 more)
skills/douban/: SKILL.md
skills/douyin/: SKILL.md
skills/hackernews/: SKILL.md
skills/jira/: SKILL.md
skills/linkedin/: SKILL.md
skills/msteams/: SKILL.md
skills/outlook/: SKILL.md
skills/reddit/: SKILL.md
skills/sigcli/: SKILL.md
skills/sigcli-auth/: SKILL.md
skills/slack/: SKILL.md
skills/telegram/: SKILL.md
skills/tiktok/: SKILL.md
skills/v2ex/: SKILL.md
skills/x/: SKILL.md
skills/xiaohongshu/: SKILL.md  requirements.txt
skills/youtube/: SKILL.md
skills/zhihu/: SKILL.md
(+699 files in other folders)
