[project]
name = "sigcli-skills"
version = "0.1.0"
description = "AI agent skills for sigcli"
requires-python = ">=3.11"
dependencies = ["requests>=2.28.0", "beautifulsoup4>=4.12.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "responses>=0.25.0", "ruff>=0.4.0"]

[tool.pytest.ini_options]
testpaths = ["outlook/tests", "msteams/tests", "slack/tests", "v2ex/tests", "zhihu/tests", "reddit/tests", "bilibili/tests", "youtube/tests", "x/tests", "xiaohongshu/tests", "hackernews/tests", "linkedin/tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
