[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sigcli-sdk"
version = "1.0.0"
description = "Lightweight client SDK for consuming Signet credentials"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["sigcli", "signet", "auth", "sdk", "credentials"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=1.0"]

[project.urls]
Repository = "https://github.com/sigcli/sigcli"

[tool.hatch.build.targets.wheel]
packages = ["src/sigcli_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
